Add more information

--- a/index.html
+++ b/index.html
@@ -7,7 +7,14 @@
 <body>
   <!content goes here>
   <header>
-    <h1></h1>
+    <h1>Beetroot</h1> <i>(Beta vulgaris)</i>
+    <nav>
+     <ol>
+       <li>Common varietes</li>
+       <li>Nutrional information</li>
+       <li>Tags</li>
+     </ol>
+    </nav>
   </header>
   <main>
     <p></p>
