Add lists and more information

--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <title>HTML template</title>
 </head>
 <body>
-  <!content goes here>
   <header>
     <h1>Beetroot</h1> <i>(Beta vulgaris)</i>
     <nav>
@@ -15,9 +14,47 @@
        <li>Tags</li>
      </ol>
     </nav>
+    <figure>
+      <img src="images/beets.jpg" alt="">
+      <figcaption>A bundle of organic beets from a local farm food co-op program</figcaption>
+    </figure>
   </header>
   <main>
-    <p></p>
+    <p>55 to 65 days are needed from germination to harvest of the root</p>
+
+    <p>The usually deep purple roots of <b>beetroot</b> are eaten either grilled, boiled, or roasted as a cooked vegetable, cold as salad after cooking and adding oil and vinegar, or raw and shredded, either alone or combined with any salad vegetable.</p>
+
+    <p>In fact, <cite>Jim Halpert</cite> once said this about beets, <q>"Fact, bears eat beets. Bears, beets, <i>"Battlestar Galactica"</i>"</q>.</p>
+
+    <p>I have some <em>weird</em> habits. For instance, <strong>I love beets.</strong> Show me a salad bar and I will clean them out of their beets. <cite>- Chris Pratt</cite></p>
+
+  <h2>Common varieties</h2>
+  <ul>
+    <li>Albino</li>
+    <li>Bull's Blood</li>
+    <li>Chioggia</li>
+    <li>Detroit Dark Red</li>
+    <li>Early Wonder</li>
+  </ul>
+  <h2>Nutrional information</h2>
+  <dl>
+    <dd>Serving size:</dd> <dt>100 g</dt>
+    <dd>Energy:</dd> <dt>180 KJ</dt>
+    <dd>Carbohydrates:</dd> <dt>9.96 g</dt>
+    <dd>Fat:</dd> <dt>0.18g</dt>
+    <dd>Protein:</dd> <dt>1.68g</dt>
+  </dl>
   </main>
+<aside>
+  <h3>Tags</h3>
+  <ul>
+    <li>Crimson</li>
+    <li>Awesome</li>
+    <li>Pick-able</li>
+    <li>Vegetable!</li>
+    <li>Delicious</li>
+  </ul>
+</aside>
+  <footer>Source: Wikipedia; Last modified:Aug 30, 2014</footer>
 </body>
 </html>
